# WebSocketIO

./: CMakeLists.txt  Client.cpp  Client.h  EventEmitter.h  README.md  Server.cpp  Server.h  Socket.cpp  Socket.h
example/: client.cpp  server.cpp
example/web/: WebSocketIO.js  index.html  main.js
